change buttons' design

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="score" id="score">0</div>
         </div>
         <div class="result_container">
-          <div class="result_title">Result</div>
+          <div class="result_title">Correct result</div>
           <div class="result" id="result">0</div>
         </div>
       </div>
