change buttons position and styling, removal of background padding

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
       </p>
 
       <div class="controlButtons_container controlButtons_container-1">
-        <button class="controlButton_1 controlButton_1-green" id="main_button">Start</button>
+        <button class="controlButton controlButton-green" id="main_button">Start</button>
     </div>
     
     <div class="controlButtons_container controlButtons_container-2">
-        <button class="controlButton_1 controlButton_1-red" id="button_exit">Exit</button>
+        <button class="controlButton controlButton-red" id="button_exit">Exit</button>
     </div>
     <script src="app.js"></script>
   </body>
