--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="result_container">
           <div class="result_title">Correct result</div>
-          <div class="result" id="result">0</div>
+          <div class="result" id="result">---</div>
         </div>
       </div>
 
@@ -35,9 +35,11 @@
         <span class="screen_number screen_number-right" id="right_number">5</span>
       </p>
 
+      <div class="timeCounter" id="time_counter"></div>
+
       <div class="controlButtons_container controlButtons_container-1">
         <button class="controlButton controlButton-green" id="main_button">Start</button>
-    </div>
+      </div>
     
     <div class="controlButtons_container controlButtons_container-2">
         <button class="controlButton controlButton-red" id="button_exit">Exit</button>
