--- a/index.html
+++ b/index.html
@@ -44,6 +44,37 @@
     <div class="controlButtons_container controlButtons_container-2">
         <button class="controlButton controlButton-red" id="button_exit">Exit</button>
     </div>
+
+    <div class="nav" id="navigation">
+      <ul class="nav_list">
+        <li class="nav_listItem nav_listItem-1">
+           <button class="controlButton controlButton-green" id="mode_toggler">Mode</button>
+        </li>
+        <li class="nav_listItem nav_listItem-2"> 
+          <button class="controlButton controlButton-green" id="difficulty_toggler">Difficulty</button>
+          <span class="difficulty_scale" id="difficulty_scale">xxx</span>
+          <button class="controlButton controlButton-green" id="difficulty_toggler">Difficulty</button>
+        </li>
+        <li class="nav_listItem nav_listItem-3"> 
+          <button class="controlButton controlButton-green" id="main_button">Start</button>
+        </li>
+        <li class="nav_listItem nav_listItem-4">
+           <button class="controlButton controlButton-green" id="main_button">Start</button>
+        </li>
+        <li class="nav_listItem nav_listItem-5">
+           <button class="controlButton controlButton-green" id="main_button">Start</button>
+        </li>
+        <li class="nav_listItem nav_listItem-7">
+          <button class="controlButton controlButton-green" id="operation_toggler-add">Add</button>
+          <button class="controlButton controlButton-green" id="operation_toggler-multiply">multiply</button>
+          <button class="controlButton controlButton-green" id="operation_toggler-substract">substract</button>
+        </li>
+        <li class="nav_listItem nav_listItem-6">
+           <button class="controlButton controlButton-green" id="backToCalculator_button">Back to calculator</button>
+        </li>
+      </ul>
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
