--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <button class="controlButton controlButton-red" id="button_exit">Exit</button>
     </div>
 
-    <div class="nav" id="navigation">
+    <div class="nav closed" id="navigation">
       <ul class="nav_list">
         <li class="nav_listItem nav_listItem-1">
            <button class="controlButton controlButton-green" id="mode_toggler">Mode</button>
