--- a/index.html
+++ b/index.html
@@ -48,29 +48,30 @@
     <div class="nav closed" id="navigation">
       <ul class="nav_list">
         <li class="nav_listItem nav_listItem-1">
-           <button class="controlButton controlButton-green" id="mode_toggler">Mode</button>
+           <button class="navButton navButton-mode" id="mode_toggler">Mode</button>
         </li>
         <li class="nav_listItem nav_listItem-2"> 
-          <button class="controlButton controlButton-green" id="difficulty_toggler">Difficulty</button>
+          <span>Difficulty</span><br>
+          <button class="navButton navButton_difficulty navButton_difficulty-decrease" id="difficulty_toggler">Difficulty</button>
           <span class="difficulty_scale" id="difficulty_scale">xxx</span>
-          <button class="controlButton controlButton-green" id="difficulty_toggler">Difficulty</button>
+          <button class="navButton navButton_difficulty navButton_difficulty-increase" id="difficulty_toggler">Difficulty</button>
         </li>
         <li class="nav_listItem nav_listItem-3"> 
-          <button class="controlButton controlButton-green" id="main_button">Start</button>
+          <!-- <button class="navButton navButton-green" id="main_button">Start</button> -->
         </li>
         <li class="nav_listItem nav_listItem-4">
-           <button class="controlButton controlButton-green" id="main_button">Start</button>
+           <!-- <button class="navButton navButton-green" id="main_button">Start</button> -->
         </li>
         <li class="nav_listItem nav_listItem-5">
-           <button class="controlButton controlButton-green" id="main_button">Start</button>
+           <!-- <button class="navButton navButton-green" id="main_button">Start</button> -->
         </li>
         <li class="nav_listItem nav_listItem-7">
-          <button class="controlButton controlButton-green" id="operation_toggler-add">Add</button>
-          <button class="controlButton controlButton-green" id="operation_toggler-multiply">multiply</button>
-          <button class="controlButton controlButton-green" id="operation_toggler-substract">substract</button>
+          <button class="navButton navButton-green" id="operation_toggler-add">+</button>
+          <button class="navButton navButton-green" id="operation_toggler-multiply">x</button>
+          <button class="navButton navButton-green" id="operation_toggler-substract">-</button>
         </li>
         <li class="nav_listItem nav_listItem-6">
-           <button class="controlButton controlButton-green" id="backToCalculator_button">Back to calculator</button>
+           <button class="navButton navButton-green" id="backToCalculator_button">Back</button>
         </li>
       </ul>
     </div>
