development of  mode button - changing mode text in multiplication

--- a/index.html
+++ b/index.html
@@ -53,14 +53,16 @@
       <ul class="options_list">
         <div class="options_modeContainer">
           <button class="options_button options_button-mode" id="mode_toggler">Mode</button>
-          <span class="options_modeText">fast</span>
+          <span class="options_modeText" id="mode_text">up to 50</span>
         </div>
         <div class="options_gameOptionsContainer">
+          
           <li class="options_listItem options_listItem-difficulty"> 
             <button class="options_button options_button_difficulty options_button_difficulty-decrease" id="difficulty_toggler">-</button>
             <span class="options_button_difficulty_scale" id="difficulty_scale">---</span>
             <button class="options_button options_button_difficulty options_button_difficulty-increase" id="difficulty_toggler">+</button>
           </li>
+
           <li class="options_listItem options_listItem-7">
             <button class="options_button options_button-green" id="operation_toggler-add">+</button>
             <button class="options_button options_button-green" id="operation_toggler-multiply">x</button>
