improvment of mode interactions with valculator - add new mode texts and handling the end of the game

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     
     <div class="controlButtons_container controlButtons_container-2">
-        <button class="controlButton controlButton-red" id="button_exit">Exit</button>
+        <button class="controlButton controlButton-red" id="button_menu">Menu</button>
     </div>
 <!-- closed -->
     <div class="options" id="navigation">
@@ -72,7 +72,7 @@
         </div>
         <div class="options_backButtonContainer">
           <li class="options_listItem options_listItem-back">
-             <button class="options_button options_button-back" id="backToCalculator_button">Back</button>
+             <button class="options_button options_button-back" id="backToCalculator_button">Game</button>
           </li>
           <li class="options_listItem options_listItem-back">
              <button class="options_button" id="xxx">Statistic</button>
