introduce active state of operation type buttons

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
           <li class="options_listItem options_listItem-7">
             <button class="options_button options_button-green" id="operation_toggler-add">+</button>
-            <button class="options_button options_button-green" id="operation_toggler-multiply">x</button>
+            <button class="options_button options_button-green active" id="operation_toggler-multiply">x</button>
             <button class="options_button options_button-green" id="operation_toggler-substract">-</button>
           </li>
 
