--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
           </li>
 
           <li class="options_listItem options_listItem-7">
-            <button class="options_button options_button-green" id="operation_toggler-add">+</button>
-            <button class="options_button options_button-green active" id="operation_toggler-multiply">x</button>
-            <button class="options_button options_button-green" id="operation_toggler-substract">-</button>
+            <button class="options_button options_button-operationToggler" id="operation_toggler-add">+</button>
+            <button class="options_button options_button-operationToggler active" id="operation_toggler-multiply">&#x2217;</button>
+            <button class="options_button options_button-operationToggler" id="operation_toggler-substract">-</button>
           </li>
 
         </div>
