developing of statistics feature - retreiving and setting localStorage

--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
              <button class="options_button options_button-back" id="backToCalculator_button">Game</button>
           </li>
           <li class="options_listItem options_listItem-back">
-             <button class="options_button" id="xxx">Statistic</button>
+             <button class="options_button" id="statistics">Statistics</button>
           </li>
         </div>
       </ul>
+          <!-- <ul class="statistics" id="statisticsList" style="position: absolute; top: 0; width: 100%; background-color: wheat;">jjj</ul> -->
     </div>
+
 
     <script type="module" src="dist/app.js"></script>
     <script type="module" src="dist/helpers.js"></script>
