create statistics table

--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Memory calculator minimal</title>
+     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link
       rel="stylesheet"
       href="./style.css"
     />
+
   </head>
   <body>
     <div class="calculator_container">
@@ -79,7 +84,6 @@
           </li>
         </div>
       </ul>
-          <!-- <ul class="statistics" id="statisticsList" style="position: absolute; top: 0; width: 100%; background-color: wheat;">jjj</ul> -->
     </div>
 
 
