developing of statistic table - add option togglers

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <ul class="options_list">
         <div class="options_modeContainer">
           <button class="options_button options_button-mode" id="mode_toggler">Mode</button>
-          <span class="options_modeText" id="mode_text">up to 50</span>
+          <span class="options_modeText" id="mode_text">get 50</span>
         </div>
         <div class="options_gameOptionsContainer">
           
