change styling of main buttons

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
       <div class="timeCounter" id="time_counter"></div>
 
       <div class="controlButtons_container controlButtons_container-1">
-        <button class="controlButton controlButton-green" id="main_button">Start</button>
+        <button class="controlButton" id="main_button">Start</button>
       </div>
     
     <div class="controlButtons_container controlButtons_container-2">
-        <button class="controlButton controlButton-red" id="button_menu">Menu</button>
+        <button class="controlButton controlButton-menu" id="button_menu">Menu</button>
     </div>
 <!-- closed -->
     <div class="options" id="navigation">
