modification of statistic table scroll effect, development of mixins

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
           <li class="options_listItem options_listItem-7">
             <button class="options_button options_button-operationToggler" id="operation_toggler-add">+</button>
-            <button class="options_button options_button-operationToggler active" id="operation_toggler-multiply">&#x2217;</button>
+            <button class="options_button options_button-operationToggler pressed" id="operation_toggler-multiply">&#x2217;</button>
             <button class="options_button options_button-operationToggler" id="operation_toggler-substract">-</button>
           </li>
 
@@ -80,7 +80,7 @@
              <button class="options_button options_button-back" id="backToCalculator_button">Game</button>
           </li>
           <li class="options_listItem options_listItem-back">
-             <button class="options_button" id="statistics">Statistics</button>
+             <button class="options_button options_button-statistics" id="statistics">Statistics</button>
           </li>
         </div>
       </ul>
