removing some comments

--- a/index.html
+++ b/index.html
@@ -85,10 +85,9 @@
         </div>
       </ul>
     </div>
-
-
     <script type="module" src="dist/app.js"></script>
-    <script type="module" src="dist/helpers.js"></script>
-    <script type="module" src="dist/mode.js"></script>
+    <!-- <script type="module" src="dist/helpers.js"></script> -->
+    <!-- <script type="module" src="dist/mode.js"></script> -->
+
   </body>
 </html>
