simplyfying application structure

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <p class="screen">
         <span class="screen_number screen_number-left" id="left_number">4</span>
-        <span class="screen_operation_sign" id="operation_sign">+</span>
+        <span class="screen_operation_sign" id="operation_sign">x</span>
         <span class="screen_number screen_number-right" id="right_number">5</span>
       </p>
 
